# metnum-project2

./: README.md
codigo/: CMakeLists.txt
codigo/outputs/con_pca/classif/: classif_1-1-10.out  classif_1-1-100.out  classif_1-1-300.out  classif_1-1-50.out  classif_1-10-10.out  classif_1-10-100.out  classif_1-10-300.out  classif_1-10-50.out  classif_1-100-10.out  classif_1-100-100.out  classif_1-100-300.out  classif_1-100-50.out  classif_1-1708-10.out  classif_1-1708-50.out  classif_1-300-10.out  classif_1-300-100.out  classif_1-300-300.out  classif_1-300-50.out  classif_1-400-10.out  classif_1-400-100.out  classif_1-400-300.out  classif_1-400-50.out  classif_1-5-10.out  classif_1-5-100.out  classif_1-5-300.out  classif_1-5-50.out  classif_1-500-10.out  classif_1-500-100.out  classif_1-500-300.out  classif_1-500-50.out
codigo/outputs/con_pca/clock/: clock_time_1-1-10.out  clock_time_1-1-100.out  clock_time_1-1-300.out  clock_time_1-1-50.out  clock_time_1-10-10.out  clock_time_1-10-100.out  clock_time_1-10-300.out  clock_time_1-10-50.out  clock_time_1-100-10.out  clock_time_1-100-100.out  clock_time_1-100-300.out  clock_time_1-100-50.out  clock_time_1-1708-10.out  clock_time_1-1708-50.out  clock_time_1-300-10.out  clock_time_1-300-100.out  clock_time_1-300-300.out  clock_time_1-300-50.out  clock_time_1-400-10.out  clock_time_1-400-100.out  clock_time_1-400-300.out  (+9 more)
codigo/src/: args.cpp  args.h  knn.cpp  knn.h  lineal.cpp  lineal.h  main.cpp  pca.cpp  pca.h
codigo/src_catedra/: reader.h  types.h  vector_builder.h
codigo/tests/: test_knn.cpp  test_pca.cpp
(+534 files in other folders)
